# realestate_api

./: .flake8  .gitignore  .render.yaml  Makefile  README.md  pyproject.toml
src/: app.py  config.py
src/app/: downloader.py  main.py
src/services/: downloader.py  fetcher.py
src/utils/: converter.py  extractor.py  filter.py
