[tool.poetry]
name = "realestate-api"
version = "0.1.0"
description = ""
authors = ["Anthony Sung <sungpinyue@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
requests = ">=2.32.5,<3.0.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
